feat: Add social section component

--- a/src/index.css
+++ b/src/index.css
@@ -120,6 +120,10 @@ body {
     @apply rounded-3xl w-16 h-16 p-2 bg-black-600;
   }
 
+  .contact-content_logo {
+    @apply rounded-3xl w-16 h-16 p-2 bg-gray-100
+  }
+
   .work-content_bar {
     @apply flex-1 w-0.5 mt-4 h-full bg-black-300 group-hover:bg-black-500 group-last:hidden;
   }
